tests/compile_fail/mul_assign/misplaced_skip_attribute.stderr
error: only `forward` allowed here
 --> tests/compile_fail/mul_assign/misplaced_skip_attribute.rs:2:14
  |
2 | #[mul_assign(skip)]
  |              ^^^^
